--- a/index.html
+++ b/index.html
@@ -48,6 +48,40 @@
         </div>
       </nav>
       <!-- nav-bar ends -->
+
+      <!-- hero starts -->
+      <section id="hero">
+        <div class="container">
+          <div class="hero-contents">
+            <div class="hero-badge">
+              <img src="/assets/circles.svg" alt="" />
+              <p>Early Access Now Open</p>
+            </div>
+            <h1 class="hero-title">
+              structured thinking,<br />
+              <span>not just note-taking.</span>
+            </h1>
+            <p class="hero-desc primary-para color-white">
+              A private space to store notes, links, and learning summaries —
+              designed to help you think clearly, connect ideas, and turn
+              learning into long-term knowledge.
+            </p>
+            <div class="hero-btns">
+              <a href=""
+                ><button class="primary-btn">
+                  Start Building Your Vault
+                  <i class="fa-solid fa-arrow-right"></i></button
+              ></a>
+              <a href=""
+                ><button class="secondary-btn">
+                  <i class="fa-solid fa-play"></i> See How It Works
+                </button></a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- hero ends -->
     </header>
     <!-- header ends -->
   </body>
