added brain section

--- a/index.html
+++ b/index.html
@@ -134,5 +134,46 @@
       </div>
     </section>
     <!-- notes section ends -->
+
+    <!-- brain section starts -->
+    <section id="brain" class="section-py">
+      <div class="brain-container container">
+        <div class="brain-img">
+          <img src="/assets/knowledge.png" alt="" />
+        </div>
+        <div class="brain-contents">
+          <p class="brain-mini-title">The Solution</p>
+          <div class="section-heading">
+            Your second brain, structured by design.
+          </div>
+          <p class="brain-desc text-dark-1">
+            Personal Knowledge Vault isn't another note-taking app. It's a
+            thinking environment where every note, link, and summary becomes
+            part of an interconnected web of understanding.
+          </p>
+          <div class="brain-list">
+            <ul>
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Capture ideas with
+                structure built-in from day one
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Connect related
+                concepts automatically as you write
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Build lasting knowledge
+                through reflection prompts
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Find anything instantly
+                with semantic search
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- brain section ends -->
   </body>
 </html>
